# latent-brs

./: .gitattributes  .gitignore  .gitmodules  MUJOCO_LOG.TXT  README.md  models.py  pyproject.toml  requirements.txt  run_constrained_ilqr_episode_sweeps.sh  run_ogbench_episode_sweeps.sh  run_planner_episode_sweeps.sh
data/: one_step_error_data_gen.py  preprocess_reacher_dataset.py  reacher_data_gen.py  reacher_data_lewm_preproc.py  reacher_dinov2_latents.py  reacher_lewm_latent_traj.py  reacher_vjepa_latents.py
error_model/: compute_quantile.py  error_model.py  pyproject.toml
eval/: koop_eval_nodec.py  latent_dyn_eval.py  lewm_eval.py  lewm_koop_eval_markov.py  lewm_koopman_eval.py  lewm_mlp_eval.py  lewm_mlp_eval_markov.py  reacher_policy_viz.py
obs_height_ogbench/: obs_start_goal_sampling_height.py  obstacle_net_height.py
ogbench/: __init__.py
plots/: benchmark_pdfs.py  timelapse.py
reacher_obs/: obstacle_net.py
scripts/: make_planning_comparison_video.py  reconstruct_reacher_lpb_videos.py  regenerate_all_tube_plots.sh  regenerate_ogbench_tube_plots.sh  regenerate_reacher_tube_plots.sh  render_hardware_final_video.py  render_pusht_pldm_rollouts.py  report_all_metrics.py  report_ogbench_cube_metrics.py  report_reacher_metrics.py  report_rope_metrics.py  report_sweep_common.py  summarize_reacher_planner_ablation.py  visualize_reacher_h5.py
shared/: models.py
sls_planner/: plan_sls_mpc.py  plan_sls_mpc_vis.py  sample_config.yaml
test/: mlp_latent_dynamics_eval.py  mlp_latent_dynamics_train.py  models_koopman.py  test_dinov2_pcas.py  test_sam3_mask.py  (+1 more)
(+607 files in other folders)
