[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-brs"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reacher", "reacher.*", "pusht", "pusht.*"]
exclude = ["latent_brs_venv*", "third_party*"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "third_party",
    "reacher/waste",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
