[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "error_model"
version = "0.1.0"
description = "Conformal MGNLL Error Model for Latent Dynamics"
authors = [
    { name = "Anutam Srinivasan" }
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "h5py",
    "tqdm",
    "pyrallis"
]

[tool.setuptools]
# Explicitly list the top-level Python files so they can be imported 
# from anywhere in your environment after running pip install -e .
py-modules = [
    "error_model",
    "datamodule",
    "train_error",
    "compute_quantile",
    "conformal_prediction"
]